new version of backend script

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 NODE_ENV=development
-CONNECTIONURL= mongodb+srv://amadimarcelino:3jXcNO4ksOed9o2k@cluster0.dautc8x.mongodb.net/blogApp?retryWrites=true&w=majority
-
-# CONNECTIONURL=mongodb+srv://transaction:chFDvtoPbNELZUmg@cluster0.bjerbjj.mongodb.net/bank
+SQL_USERNAME=dev
+SQL_PASSWORD=12345
+SQL_HOST=localhost
+SQL_PORT=1433
+SQL_NAME=DESKTOP-8OBUOTU
+DB=customer_receipt
