--- a/package.json
+++ b/package.json
@@ -4,22 +4,28 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon app.js",
     "start:prod": "Set NODE_ENV=production & node server.js"
   },
   "author": "AbbayMortage",
   "license": "ISC",
   "dependencies": {
+    "-": "^0.0.1",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.4.4",
+    "mssql": "^6.2.3",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.2.3",
     "nodemon": "^2.0.19",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "save": "^2.9.0",
+    "sequelize": "^5.15.0"
   }
 }
