--- a/.env
+++ b/.env
@@ -1,7 +1,22 @@
-NODE_ENV=development
+# NODE_ENV=development
+# SQL_USERNAME=dev
+# SQL_PASSWORD=Pat12345678
+# SQL_HOST=mssql-130743-0.cloudclusters.net
+# SQL_PORT=19245
+# SQL_NAME=DESKTOP-8OBUOTU
+# DB=customer_receipt
+
+# NODE_ENV=development
+# SQL_USERNAME=dev
+# SQL_PASSWORD=12345
+# SQL_HOST=DESKTOP-8OBUOTU
+# SQL_PORT=1433
+# SQL_NAME=DESKTOP-8OBUOTU
+# DB=customer_receipt
+
 SQL_USERNAME=dev
-SQL_PASSWORD=Pat12345678
-SQL_HOST=mssql-130743-0.cloudclusters.net
-SQL_PORT=19245
+SQL_PASSWORD=12345
+SQL_HOST=DESKTOP-8OBUOTU
+SQL_PORT=1433
 SQL_NAME=DESKTOP-8OBUOTU
 DB=customer_receipt
